--- a/.env
+++ b/.env
@@ -8,7 +8,12 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
+DB_CONNECTION=mongodb
+DB_HOST=127.0.0.1
+DB_PORT=27017
+DB_DATABASE=sistema
+DB_USERNAME=
+DB_PASSWORD=
 
 
 BROADCAST_DRIVER=log
